--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,39 +1,41 @@
-.imagesDevelopers { 
-    width: 200px;
-    height: 250px;
-    object-fit: cover;
+.imagesDevelopers {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
 }
 
 #imagesDevelopersWrapper {
-    display: flex;
+  display: flex;
 }
 #imagesDevelopersWrapper div {
-    text-align:  center;
+  text-align: center;
 }
 .titles {
-    padding: 15px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 20px;
-    background-color: #696969;
+  padding: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 20px;
+  background-color: #696969;
 }
 
 @media screen and (max-width: 1226px) {
-    #imagesDevelopersWrapper {
-        justify-content: center;
-        padding-bottom: 30px;
-    }    
+  #imagesDevelopersWrapper {
+    justify-content: center;
+    padding-bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 712px) {
-    .imagesDevelopers { 
-        width: 100%;
-        height: calc(100% - 30px);
-    }
+  .imagesDevelopers {
+    width: 100%;
+    height: calc(100% - 30px);
+  }
+  .imagesDevelopers div {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 530px) {
-    .titles {
-      font-size: 18px;
-    }
+  .titles {
+    font-size: 18px;
+  }
 }
-
