--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -30,6 +30,7 @@
     width: 100%;
     height: calc(100% - 30px);
   }
+  #imagesDevelopersWrapper > div,
   .imagesDevelopers div {
     width: 100%;
   }
